# Fabazel

./: BUILD.bazel  MODULE.bazel  README.md  maven_install.json
.github/workflows/: build.yml
mod/: BUILD.bazel
mod/src/main/: BUILD.bazel
mod/src/main/java/top/fifthlight/fabazel/: Fabazel.java  FabazelJava.java
mod/src/main/java/top/fifthlight/fabazel/mixin/: TestMixin.java
mod/src/main/kotlin/: Main.kt
mod/src/main/kotlin/top/fifthlight/fabazel/: Fabazel.kt
mod/src/main/resources/: fabazel.mixins.json  fabric.mod.json
repo/: minecraft_jar.bzl
rule/: remap_jar.bzl
rule/dev_launch_wrapper/: DevLaunchWrapper.java
rule/extract/: BUILD.bazel  JarExtractor.java
rule/mapping_merger/: BUILD.bazel  MappingMerger.java
rule/tiny_remapper_worker/src/main/kotlin/top/fifthlight/fabazel/remapper/: TinyRemapperWorker.kt
